Fix layout issue on articles + keep fullscreen option for EM pages

--- a/front/style/_content.scss
+++ b/front/style/_content.scss
@@ -87,7 +87,7 @@
     }
 }
 
-.articles article {
+.emmanuel-macron article {
     > h1, > h2, > h3, > h4, > h5, > h6,
     > p, > ul, > ol, > div, > blockquote,
     > figure, > img, > iframe {
